Archive2/6b/eb5aa88f44d435/output
main.cpp:2:4: error: use of undeclared identifier 'MyClass'
T* MyClass::New(size_t count) 
   ^
main.cpp:2:17: error: unknown type name 'size_t'
T* MyClass::New(size_t count) 
                ^
2 errors generated.
